infrastructure/kubeflow/rbac.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-kubeflow
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-auth
  namespace: auth
spec:
  action: ALLOW
  rules:
  - {}
